# edgetech-s3-uploader

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  example.env
.github/workflows/: code-quality.yml  dockerbuild.yml  releasetag.yml
s3-uploader/: Dockerfile  pyproject.toml  requirements.txt  s3_uploader.py  s3_uploader_pub_sub.py
